--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     ],
     "require": {
         "php": ">=8.0",
-        "laravel-notification-channels/telegram": "^3.0"
+        "laravel-notification-channels/telegram": "^3.0",
+        "amocrm/amocrm-api-library": "^0.13.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.20"
